--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
   "name": "vue2-google-maps",
-  "version": "0.0.0"
+  "version": "0.0.0",
+  "dependencies": {
+   "babel-runtime": "^5.8.0",
+    "marker-clusterer-plus": "^2.1.4" 
+  }
 }
