--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue2-google-maps",
+  "name": "vue2-google-maps-123",
   "version": "0.0.0",
    "main": "dist/main.js",
   "dependencies": {
