--- a/package.json
+++ b/package.json
@@ -1,9 +1,23 @@
 {
   "name": "vue2-google-maps",
   "version": "0.0.0",
-   "main": "dist/main.js",
+  "main": "dist/main.js",
   "dependencies": {
-   "babel-runtime": "^5.8.0",
-    "marker-clusterer-plus": "^2.1.4" 
-  } 
+    "babel-runtime": "^5.8.0",
+    "marker-clusterer-plus": "^2.1.4"
+  },
+  "scripts": {
+    "dev": "webpack-dev-server --inline --hot --quiet --port 9999",
+    "build-copy": "node ./build-copy.js",
+    "build-babel": "babel src --out-dir dist",
+    "build-webpack": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "build": "npm run build-babel && npm run build-copy && npm run build-webpack",
+    "test": "npm run lab-tests && npm run lint",
+    "lint": "eslint --ext .vue,.js src && eslint --ext .vue,.html,.js test",
+    "lab-tests": "lab -T test/test-setup/babel-transform.js -l -S test",
+    "build-examples-webpack": "cd examples && cross-env NODE_ENV=production webpack",
+    "build-examples-before": "npm run build && shx cp dist/vue-google-maps.js examples",
+    "build-examples": "npm run build-examples-before && npm run build-examples-webpack",
+    "deploy": "npm run build-examples && gh-pages -d examples"
+  }
 }
