--- a/package.json
+++ b/package.json
@@ -19,5 +19,47 @@
     "build-examples-before": "npm run build && shx cp dist/vue-google-maps.js examples",
     "build-examples": "npm run build-examples-before && npm run build-examples-webpack",
     "deploy": "npm run build-examples && gh-pages -d examples"
+  },
+  "devDependencies": {
+    "shelljs": "^0.8.1",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^6.1.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-runtime": "^5.8.0",
+    "code": "^5.2.0",
+    "cross-env": "^1.0.8",
+    "css-loader": "^0.23.0",
+    "eslint": "^3.17.1",
+    "eslint-config-standard": "^7.0.1",
+    "eslint-plugin-html": "^2.0.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^2.1.1",
+    "file-loader": "^0.8.4",
+    "gh-pages": "^0.11.0",
+    "jsdom": "^9.8.3",
+    "lab": "^15.2.0",
+    "less": "^2.5.3",
+    "less-loader": "^2.2.2",
+    "lodash": "^4.15.0",
+    "lodash-es": "^4.17.4",
+    "lodash-webpack-plugin": "^0.11.4",
+    "puppeteer": "^1.1.0",
+    "raw-loader": "^0.5.1",
+    "shx": "^0.2.0",
+    "style-loader": "^0.13.0",
+    "stylus-loader": "^1.4.0",
+    "template-html-loader": "0.0.3",
+    "vue": "^2.2.1",
+    "vue-hot-reload-api": "^1.2.0",
+    "vue-html-loader": "^1.0.0",
+    "vue-loader": "^11.1.3",
+    "vue-router": "^2.7.0",
+    "vue-template-compiler": "^2.1.6",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.1"
   }
 }
